--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>About</title>
-<link href="main-project.css" rel="stylesheet" type="text/css">
+<title>Home</title>
+	<link href="main-project.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 <nav>
 	<div class="nav-bar">
@@ -16,5 +15,7 @@
 		</ul>
 	</div>
 </nav>
+	<h1>My Blog</h1>
+	<h2>Come hear my thoughts on life</h2>
 </body>
 </html>
