--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>About</title>
+<title>Contact</title>
 <link href="main-project.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 <nav>
 	<div class="nav-bar">
